err/openapp-indivo-demographics.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_form_admin-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/formadmin'...
Listing './lib/python3.5/site-packages/formadmin/templates'...
Listing './lib/python3.5/site-packages/formadmin/templates/formadmin'...
Listing './lib/python3.5/site-packages/formadmin/templatetags'...
Listing './lib/python3.5/site-packages/openapp_indivo'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/registered_apps'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/registered_apps/user'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/registered_apps/user/openapp_indivo.demographics'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/static'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/static/openapp_indivo'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/static/openapp_indivo/demographics'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/static/openapp_indivo/demographics/images'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/templates'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/templates/openapp_indivo'...
Listing './lib/python3.5/site-packages/openapp_indivo/demographics/templates/openapp_indivo/demographics'...
Compiling './lib/python3.5/site-packages/openapp_indivo/demographics/views.py'...
***   File "./lib/python3.5/site-packages/openapp_indivo/demographics/views.py", line 154
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openapp_indivo_demographics-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
